[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/img/Ship_Main_Icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -200, 540 ), Vector2( 960, 540 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "freeze"
}, {
"args": [  ],
"method": "unfreeze"
} ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), null, ExtResource( 1 ), null, ExtResource( 1 ), null ],
"loop": true,
"name": "invulnerable",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 960, 540 )
rotation = 3.14159
scale = Vector2( 1.25, 1.25 )
z_index = 1
collision_mask = 10
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -14, -26, 14, -26, 19, -13, 19, 5, 34, 11, 34, 15, 19, 19, 10, 15, 6, 26, -6, 26, -10, 15, -18, 19, -34, 15, -34, 11, -19, 5, -19, -13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
z_index = 1
frames = SubResource( 1 )
playing = true

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( -16, 0 )

[node name="InvulnerableTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="InvulnerableTimer" to="." method="_on_InvulnerableTimer_timeout"]
